Added some basic authentication using hapi-auth-cookie - currently driven by a static array of users - will be a MongoDB document.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Boxer</title>
+    <title>Boxer {{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/flatly/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="container">
-        <div class="col-xs-12 main-wrapper">
+        <div class="col-xs-12">
             {{{ content }}}
         </div>
     </div>
