--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,15 +4,61 @@
 
 body {
     margin: 75px 0;
+}
 
-    background: url('/assets/images/blocks3_.jpg') no-repeat center center fixed;
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+/**
+ * Sticky Footer Styles
+ */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #2c3e50;
+}
+
+.footer > .container {
+    line-height: 21px;
+    padding: 18.5px 15px 20.5px;
+}
+.footer > .container > p {
+    margin-bottom: 0;
+}
+
+/**
+ * Login Styles
+ */
+body#login {
+    background: url('/assets/images/background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.panel-default {
+    opacity: 0.98;
+    margin-top: 30px;
+}
+
+.form-group:last-child {
+    margin-bottom: 0;
+}
+
+.help-block {
+    font-size: 0.8em;
+}
+
+.vertical-center {
+    position: absolute;
+    top: calc(50% - 250px);
+    width: 100%;
 }
